Dummy_Package_for_scratch_org/main/default/objects/Scheduled_Job_Run__c/fields/Called_URL__c.field-meta.xml
<CustomField>
    <fullName>Called_URL__c</fullName>
    <label>Called URL</label>
    <type>Url</type>
</CustomField>