Dummy_Package_for_scratch_org/main/default/objects/Scheduled_Job_Run__c/fields/Run_as_User__c.field-meta.xml
<CustomField>
    <fullName>Run_as_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Run as User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Scheduled_Job_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>