Dummy_Package_for_scratch_org/main/default/objects/Scheduled_Job_Run__c/fields/Scheduled_Job__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Job__c</fullName>
    <label>Scheduled Job</label>
    <referenceTo>Scheduled_Job__c</referenceTo>
    <relationshipLabel>Scheduled Job Runs</relationshipLabel>
    <relationshipName>Scheduled_Job_Runs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>